--- a/10_async/index.html
+++ b/10_async/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>ASYNCCCC</h1>
-    <script src="index.js"></script>
+    <!-- <script src="index.js"></script> -->
+    <!-- <script src="promise.js"></script> -->
+    <script src="aysncAwait.js"></script>
 </body>
 </html>
